hphp/test/zend/good/ext/pcre/tests/bug27103.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (@preg_match('/./u', '') === false) {
    exit('skip no utf8 support in PCRE library');
}
}
