hphp/test/zend/bad/ext/pcre/tests/marks.php.skipif
<?php
if (version_compare(PCRE_VERSION, '8.1', '<')) {
    die('skip PCRE_VERSION >= 8.1 is required for MARK support');
}
?>